--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 
     <build>
         <defaultGoal>install</defaultGoal>
+        <testSourceDirectory>src/test/java</testSourceDirectory>
     </build>
+
 
 </project>
