--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,22 @@
         <testSourceDirectory>src/test/java</testSourceDirectory>
     </build>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.myorg</groupId>
+                <artifactId>myproject-parent</artifactId>
+                <version>${myproject.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.11</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
